--- a/modlist.html
+++ b/modlist.html
@@ -1,5 +1,7 @@
 ﻿<ul>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/held-item-tooltips">Held Item Tooltips [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/croptopia">Croptopia (by thethonk)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mcda">MC Dungeons Armors (by chronos_sacaria)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-stats">Better Statistics Screen (Fabric) (by Dev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/alloy-forgery">Alloy Forgery (by gliscowo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/selene">Moonlight Lib (by MehVahdJukaar)</a></li>
@@ -19,13 +21,16 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/grind-enchantments">Grind Enchantments (by mschae23)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/darkquesting-a-quest-mod">DarkQuesting - Custom Quests (by GamerPotion)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-essentials-forge">FTB Essentials (Forge) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/visual-workbench">Visual Workbench [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gear-core">Gear Core (by fzzyhmstrs)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/pick-up-notifier">Pick Up Notifier [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-combat-by-daedelus">Better Combat [Fabric & Forge] (by daedelus_dev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-lost-castle-fabric">The Lost Castle [Fabric] (by jack_bagel)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/not-enough-trinket-slots-nets">Not Enough Trinket Slots (NETS) (by Cookie_GD)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/drippy-loading-screen-fabric">Drippy Loading Screen [Fabric] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mob-variants">Mob Variants (by Xires87)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/starter-kit">Starter Kit (by Serilum)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mob-lassos">Mob Lassos [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/owo-lib">oωo (owo-lib) (by gliscowo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/productive-villagers">Productive Villagers (by captaintenneal81)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modernfix">ModernFix (by embeddedt)</a></li>
@@ -45,7 +50,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/main-menu-credits">Main Menu Credits (by XanderIsDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/amethyst-core">Amethyst Core (by fzzyhmstrs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fzzy-core">Fzzy Core (by fzzyhmstrs)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/biome-music">Biome Music[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/collective">Collective (by Serilum)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/medieval-music">Medieval Music[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/architectury-api">Architectury API (Fabric/Forge) (by shedaniel)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/loot-integrations">Loot Integrations[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/diggus-maximus">Diggus Maximus (by Kyrptonaught)</a></li>
@@ -69,6 +76,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/balm-fabric">Balm (Fabric Edition) (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/entity-texture-features-fabric">[ETF] Entity Texture Features - [Fabric & Forge] (by traben_0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/drp-global-datapack">Global Packs (by JTK222)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-anvils">Easy Anvils [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-chests-for-fabric">Iron Chests (Fabric) (by cyberanner)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-api">Fabric API (by modmuss50)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fancymenu-fabric">FancyMenu [Fabric] (by Keksuccino)</a></li>
@@ -127,7 +135,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/zoomify">Zoomify (by XanderIsDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hopo-better-ruined-portals">Hopo Better Ruined Portals (by hoponopono)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/enchanting-infuser-forge">Enchanting Infuser [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-chat-history">More Chat History (by JackFred2)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/puzzles-lib">Puzzles Lib [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/audio-extension-for-fancymenu-fabric">Audio Extension for FancyMenu [Fabric] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/language-reload">Language Reload (by Jerozgen)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/debugify">Debugify (by XanderIsDev)</a></li>
@@ -136,10 +146,13 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sodium-extra">Sodium Extra (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by Gecko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-language-kotlin">Fabric Language Kotlin (by modmuss50)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mutant-monsters">Mutant Monsters [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gearifiers">Gearifiers (by fzzyhmstrs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabricskyboxes-interop">FabricSkyBoxes Interop (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hold-that-chunk">Hold That Chunk (by The_TermiGator)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/altorigingui">Alternate Origin GUI (by UltrusBot)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/betternether">BetterNether (by Quiqueck)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/hang-glider">Hang Glider [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/trinkets">Trinkets (Fabric) (by EmilyPloszaj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yeetusexperimentus">Yeetus Experimentus (by Sunekaer)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/digs-dnd-origins">Dig's DnD Origins (by distantdig)</a></li>
@@ -148,4 +161,5 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patboxs-brewery">Patbox's Brewery (by Patbox)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forge-config-api-port-fabric">Forge Config API Port [Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rrls">Remove Reloading Screen (by dimadencep)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/simply-swords">Simply Swords [Fabric & Forge] (by sweenuss)</a></li>
 </ul>
