--- a/modlist.html
+++ b/modlist.html
@@ -49,6 +49,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patboxs-brewery">Patbox's Brewery (by Patbox)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/awesome-dungeon-edition-ocean-fabric">Awesome Dungeon Ocean edition - Fabric (by jtl_elisa)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/varietyapi">Variety API (by texboobcat)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/chunky-pregenerator">Chunky (Fabric) (by pop4959)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/villager-names-fabric">Villager Names (Fabric) (by YumatanGames)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/not-enough-trinket-slots-nets">Not Enough Trinket Slots (NETS) (by Cookie_GD)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cit-resewn">CIT Resewn (by SHsuperCM)</a></li>
@@ -97,6 +98,7 @@
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/food-tooltips">Food Tooltips (by zekk051)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mixintrace">MixinTrace (by comp500)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/library-ferret-fabric">Library Ferret - Fabric (by jtl_elisa)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mariums-soulslike-weaponry">Marium's Soulslike Weaponry (by mariumbacchus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/variety-aquatic">Variety Aquatic (by texboobcat)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sandwichable">Sandwichable (by FoundationGames)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/human-player-villagers">Human Player Villagers (by CmdrMCNuggets)</a></li>
