--- a/modlist.html
+++ b/modlist.html
@@ -34,10 +34,12 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/stylish-effects">Stylish Effects (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/held-item-tooltips">Held Item Tooltips [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simply-swords">Simply Swords [Fabric & Forge] (by sweenuss)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/sodium">Sodium (by jellysquid3_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/diggus-maximus">Diggus Maximus (by Kyrptonaught)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/structure-essentials-forge-fabric">Structure Essentials[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/framework-fabric">Framework (Fabric) (by MrCrayfish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spell-engine">Spell Engine (by daedelus_dev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/tooltipfix">ToolTipFix (by Kyrptonaught)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rune-crafting">Runes [Fabric] (by daedelus_dev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/kiwi-fabric">Kiwi 🥝 (Fabric) (by Snownee)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bluemap">BlueMap (by TBlueF)</a></li>
@@ -54,7 +56,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/towns-and-towers">Towns and Towers (by Biban_Auriu)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/waystones-fabric">Waystones (Fabric Edition) (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/archon">Archon (by safrodev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/stacked-armor-trims">Stacked Armor Trims (by ApfelRauber)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/projectile-damage-attribute">Projectile Damage Attribute [Fabric & Forge] (by daedelus_dev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ironchests">Iron Chests: Restocked (by ThatGravyBoat)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sodium-extra">Sodium Extra (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dungeon-and-taverns">Dungeons and Taverns (by Nova_Wostra)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jade">Jade 🔍 (by Snownee)</a></li>
@@ -82,13 +86,16 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/reeses-sodium-options">Reese's Sodium Options (by FlashyReese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cristel-lib">Cristel Lib (by Cristelknight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chunk-pregenerator-fabric">Fabric Chunk Pregenerator (by Jasmine)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bisecthosting-server-integration-menu-fabric">BisectHosting Server Integration Menu [FABRIC] (by BisectHosting)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hopo-better-ruined-portals">Hopo Better Ruined Portals (by hoponopono)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/nbttooltips">NBTtooltips (by MisionThi)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/altorigingui">Alternate Origin GUI (by UltrusBot)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/discreet-gui">Discreet GUI (by Feangar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/trinkets">Trinkets (Fabric) (by EmilyPloszaj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forge-config-api-port-fabric">Forge Config API Port [Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-fabric">FTB Library (Fabric) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/all-the-trims">All The Trims (by bawnorton)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/small-ships">Small Ships [Fabric & Forge] (by talhanation)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/stellarity">Stellarity (by kohara)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/not-enough-trinket-slots-nets">Not Enough Trinket Slots (NETS) (by Cookie_GD)</a></li>
@@ -113,18 +120,15 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/craterlib">CraterLib (by hypherionsa)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/puzzles-lib">Puzzles Lib [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/polymorph">Polymorph (Fabric/Forge/Quilt) (by TheIllusiveC4)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/porting-lib">Porting Lib (by thatguynamedalpha)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/essentialgui">EssentialGUI (by lord_rius)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by Gecko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-essentials-fabric">Inventory Essentials (Fabric Edition) (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-anvils">Easy Anvils [Forge & Fabric] (by Fuzs)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/irisshaders">Iris Shaders (by coderbot)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/armor-statues">Armor Statues [Forge & Fabric] (by Fuzs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fabric-language-kotlin">Fabric Language Kotlin (by modmuss50)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/owo-lib">oωo (owo-lib) (by gliscowo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/travelers-backpack-fabric">Traveler's Backpack [Fabric] (by Tiviacz1337)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/passable-foliage-fabric">Passable Foliage 🌳 (Fabric) (by Snownee)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-trims">Better Trims (by bawnorton)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafting-tweaks-fabric">Crafting Tweaks (Fabric Edition) (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/texture-packs/enhanced-boss-bars">Enhanced Boss Bars (by Nakuring)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/diet">Diet (Fabric/Forge/Quilt) (by TheIllusiveC4)</a></li>
